Fixes email address

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
 
 <p>Indirizzo:&nbsp;<a href="#route">Via prima 6, Q.re La Famiglia, Brescia</a><br />
 Telefono:&nbsp;<a href="http://tel:03012345678/">030-12345678</a><br />
-E-mail:&nbsp;<a href="mailto:info@sorrisomontessori.it">i</a><a href="mailto:info@sorrisomontessori.it">info@sorrisomontessori.it</a></p>
+E-mail:&nbsp;<a href="mailto:info@sorrisomontessori.it">info@sorrisomontessori.it</a></p>
 
 <h2>Domande?</h2>
 
