Fixes hostname references

--- a/en/comments/feed/index.html
+++ b/en/comments/feed/index.html
@@ -3,19 +3,19 @@
 	xmlns:dc="http://purl.org/dc/elements/1.1/"
 	xmlns:atom="http://www.w3.org/2005/Atom"
 	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
-	
+
 	>
 <channel>
 	<title>
 	Comments for Master Retail	</title>
-	<atom:link href="http://www.master-retail.it/en/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://www.master-retail.it/en/</link>
+	<atom:link href="http://boncri.github.io/en/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://boncri.github.io/en/</link>
 	<description>Un nuovo sito targato WordPress</description>
 	<lastBuildDate>Fri, 24 Jun 2016 08:37:45 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
 	1	</sy:updateFrequency>
-	
+
 </channel>
 </rss>
