--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>Master Retail</title>
-	<atom:link href="http://www.master-retail.it/feed/" rel="self" type="application/rss+xml" />
-	<link>http://www.master-retail.it</link>
+	<atom:link href="http://boncri.github.io/feed/" rel="self" type="application/rss+xml" />
+	<link>http://boncri.github.io</link>
 	<description>Un nuovo sito targato WordPress</description>
 	<lastBuildDate>Fri, 24 Jun 2016 08:37:45 +0000</lastBuildDate>
 	<language>it-IT</language>
@@ -18,6 +18,6 @@
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
 	1	</sy:updateFrequency>
-	
+
 </channel>
 </rss>
