--- a/en/feed/index.html
+++ b/en/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>Master Retail</title>
-	<atom:link href="http://www.master-retail.it/en/feed/" rel="self" type="application/rss+xml" />
-	<link>http://www.master-retail.it/en/</link>
+	<atom:link href="http://boncri.github.io/en/feed/" rel="self" type="application/rss+xml" />
+	<link>http://boncri.github.io/en/</link>
 	<description>Un nuovo sito targato WordPress</description>
 	<lastBuildDate>Fri, 24 Jun 2016 08:37:45 +0000</lastBuildDate>
 	<language>en-US</language>
@@ -18,6 +18,6 @@
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
 	1	</sy:updateFrequency>
-	
+
 </channel>
 </rss>
