--- a/index9ea7.html
+++ b/index9ea7.html
@@ -1,15 +1,15 @@
 <HTML>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from localhost/?wordfence_lh=1&hid=B31D110048573695470D1A94266D837E by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:22 GMT -->
+<!-- Mirrored from boncri.github.io/?wordfence_lh=1&hid=B31D110048573695470D1A94266D837E by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:22 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=http://www.master-retail.it/?wordfence_lh=1%26hid=B31D110048573695470D1A94266D837E"><TITLE>Page has moved</TITLE>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=http://boncri.github.io/?wordfence_lh=1%26hid=B31D110048573695470D1A94266D837E"><TITLE>Page has moved</TITLE>
 </HEAD>
 <BODY>
-<A HREF="http://www.master-retail.it/?wordfence_lh=1%26hid=B31D110048573695470D1A94266D837E"><h3>Click here...</h3></A>
+<A HREF="http://boncri.github.io/?wordfence_lh=1%26hid=B31D110048573695470D1A94266D837E"><h3>Click here...</h3></A>
 </BODY>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from localhost/?wordfence_lh=1&hid=B31D110048573695470D1A94266D837E by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:22 GMT -->
+<!-- Mirrored from boncri.github.io/?wordfence_lh=1&hid=B31D110048573695470D1A94266D837E by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:22 GMT -->
 </HTML>
