Fixex http links to https

--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>Master Retail</title>
-	<atom:link href="http://boncri.github.io/feed/" rel="self" type="application/rss+xml" />
-	<link>http://boncri.github.io</link>
+	<atom:link href="https://boncri.github.io/feed/" rel="self" type="application/rss+xml" />
+	<link>https://boncri.github.io</link>
 	<description>Un nuovo sito targato WordPress</description>
 	<lastBuildDate>Fri, 24 Jun 2016 08:37:45 +0000</lastBuildDate>
 	<language>it-IT</language>
