--- a/en/comments/feed/index.html
+++ b/en/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for Master Retail	</title>
-	<atom:link href="http://boncri.github.io/en/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://boncri.github.io/en/</link>
+	<atom:link href="https://boncri.github.io/en/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>https://boncri.github.io/en/</link>
 	<description>Un nuovo sito targato WordPress</description>
 	<lastBuildDate>Fri, 24 Jun 2016 08:37:45 +0000</lastBuildDate>
 	<sy:updatePeriod>
