--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Commenti per Master Retail	</title>
-	<atom:link href="https://boncri.github.io/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>https://boncri.github.io</link>
+	<atom:link href="https://masterretail.github.io/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>https://masterretail.github.io</link>
 	<description>Un nuovo sito targato WordPress</description>
 	<lastBuildDate>Fri, 24 Jun 2016 08:37:45 +0000</lastBuildDate>
 	<sy:updatePeriod>
