--- a/en/index0bab.html
+++ b/en/index0bab.html
@@ -1,15 +1,15 @@
 <HTML>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from boncri.github.io/en/?wordfence_lh=1&hid=816AC465708B7FA91CBE185502E17216 by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:26 GMT -->
+<!-- Mirrored from masterretail.github.io/en/?wordfence_lh=1&hid=816AC465708B7FA91CBE185502E17216 by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:26 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=https://boncri.github.io/en/?wordfence_lh=1%26hid=816AC465708B7FA91CBE185502E17216"><TITLE>Page has moved</TITLE>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=https://masterretail.github.io/en/?wordfence_lh=1%26hid=816AC465708B7FA91CBE185502E17216"><TITLE>Page has moved</TITLE>
 </HEAD>
 <BODY>
-<A HREF="https://boncri.github.io/en/?wordfence_lh=1%26hid=816AC465708B7FA91CBE185502E17216"><h3>Click here...</h3></A>
+<A HREF="https://masterretail.github.io/en/?wordfence_lh=1%26hid=816AC465708B7FA91CBE185502E17216"><h3>Click here...</h3></A>
 </BODY>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from boncri.github.io/en/?wordfence_lh=1&hid=816AC465708B7FA91CBE185502E17216 by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:26 GMT -->
+<!-- Mirrored from masterretail.github.io/en/?wordfence_lh=1&hid=816AC465708B7FA91CBE185502E17216 by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:26 GMT -->
 </HTML>
