--- a/indexa836.html
+++ b/indexa836.html
@@ -1,15 +1,15 @@
 <HTML>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from boncri.github.io/?wordfence_lh=1&hid=3D6CD45F038B8F2D89B32361BE5BA0EB by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:16 GMT -->
+<!-- Mirrored from masterretail.github.io/?wordfence_lh=1&hid=3D6CD45F038B8F2D89B32361BE5BA0EB by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:16 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=https://boncri.github.io/?wordfence_lh=1%26hid=3D6CD45F038B8F2D89B32361BE5BA0EB"><TITLE>Page has moved</TITLE>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=https://masterretail.github.io/?wordfence_lh=1%26hid=3D6CD45F038B8F2D89B32361BE5BA0EB"><TITLE>Page has moved</TITLE>
 </HEAD>
 <BODY>
-<A HREF="https://boncri.github.io/?wordfence_lh=1%26hid=3D6CD45F038B8F2D89B32361BE5BA0EB"><h3>Click here...</h3></A>
+<A HREF="https://masterretail.github.io/?wordfence_lh=1%26hid=3D6CD45F038B8F2D89B32361BE5BA0EB"><h3>Click here...</h3></A>
 </BODY>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from boncri.github.io/?wordfence_lh=1&hid=3D6CD45F038B8F2D89B32361BE5BA0EB by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:16 GMT -->
+<!-- Mirrored from masterretail.github.io/?wordfence_lh=1&hid=3D6CD45F038B8F2D89B32361BE5BA0EB by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 03 Dec 2020 16:58:16 GMT -->
 </HTML>
