--- a/progetti/index.html
+++ b/progetti/index.html
@@ -841,7 +841,7 @@ width: 90%;
 <!-- THE GRID ITSELF WITH ENTRIES -->
 <!-- ############################ -->
 <ul>
-<!-- PORTFOLIO ITEM 9 -->
+<!-- PORTFOLIO ITEM NEW  -->
 <li class="filterall filter-progetti filter-opzionale eg-henryharrison-wrapper eg-post-id-3934" data-date="1542206941">
     <!-- THE CONTAINER FOR THE MEDIA AND THE COVER EFFECTS -->
     <div class="esg-media-cover-wrapper">
